# QCustomPlotBasics

./: .gitignore  CMakeLists.txt  README.md
QCustomPlot/: qcustomplot.cpp  qcustomplot.h
src/: example_gnuplot.cpp  mainwindow.h
